Fixed hover contrast error

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -155,6 +155,7 @@ input:checked+.slider:before {
 
 nav a:hover {
     background-color: var(--secondary-color);
+    color: var(--accent-color);
 }
 
 main {
